Fix white space in right size

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @use '@angular/material' as mat;
 
-html, body { height: 100%; }
+html, body {
+  overflow-x: hidden;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .dense-2 {
